--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     ]
   },
   "scripts": {
-    "lint": "eslint --ext .jsx,.js,.ts,.tsx packages/",
+    "lint": "eslint --ext .jsx,.js,.ts,.tsx",
     "lint:fix": "yarn lint --fix",
     "pre-commit": "lint-staged",
     "pre-push": "yarn test:coverage && yarn lint",
