--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -3,7 +3,7 @@ name: Pull requests
 on: [pull_request]
 
 jobs:
-  test:
+  pipeline-quality:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
