--- a/package.json
+++ b/package.json
@@ -5,20 +5,26 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/*"
+      "packages/*/*"
     ]
   },
   "scripts": {
     "build": "echo build",
-    "lint": "eslint --ext .jsx,.js,.ts,.tsx",
+    "build-storybook": "build-storybook",
+    "clean": "yarn workspaces foreach -pv run clean",
+    "lint": "eslint packages --ext .jsx,.js,.ts,.tsx --quiet",
     "lint:fix": "yarn lint --fix",
     "pre-commit": "lint-staged",
-    "pre-push": "yarn test:coverage && yarn lint",
+    "pre-push": "yarn test:coverage && yarn lint && types:check",
     "prepare-husky": "husky install",
-    "test": "echo test",
-    "test:coverage": "echo test:coverage",
-    "test:staged": "echo test:staged",
-    "test:watch": "echo test:watch"
+    "reset": "yarn clean && rm -rf node_modules .yarn/cache .parcel-cache",
+    "storybook": "start-storybook -p 6006 --ci",
+    "start:dev": "yarn storybook",
+    "test": "jest --passWithNoTests --no-cache --runInBand --watchAll=false",
+    "test:coverage": "yarn test --coverage",
+    "test:staged": "yarn test --findRelatedTests",
+    "test:watch": "yarn test --watch",
+    "types:check": "tsc --skipLibCheck --noEmit"
   },
   "repository": {
     "type": "git",
@@ -29,17 +35,40 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "homepage": "https://github.com/TiendaNube/nimbus-design-system#readme",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@jest/types": "^28.1.3",
+    "@storybook/addon-a11y": "^6.5.10",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack4": "^6.5.10",
+    "@storybook/manager-webpack4": "^6.5.10",
+    "@storybook/react": "^6.5.10",
+    "@testing-library/react": "^13.3.0",
     "@tiendanube/eslint-config": "^0.3.2",
+    "@types/jest": "28.1.6",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-import-resolver-typescript": "^3.4.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.8.1",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-mdx": "^2.0.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -49,8 +78,18 @@
     "eslint-plugin-spellcheck": "^0.0.19",
     "eslint-plugin-testing-library": "^5.5.1",
     "husky": "^8.0.1",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "sass": "^1.54.3",
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "engines": {
+    "node": ">=12",
+    "yarn": ">=2"
   }
 }
