--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "typescript": "^4.7.4"
   },
   "engines": {
-    "node": ">=12",
-    "yarn": ">=2"
-  }
+    "node": ">=14.17 <=16.x",
+    "yarn": ">=3.2.0"
+  },
+  "packageManager": "yarn@3.2.0"
 }
