--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -26,10 +26,10 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - name: Install dependencies
         if: steps.yarn-cache-dir-path.outputs.cache-hit != 'true'
-        run: yarn install --immutable
+        run: yarn
       - name: Run build
         run: yarn build
       - name: Run lint
         run: yarn lint
       - name: Run tests
-        run: yarn test
+        run: yarn test:ci
