--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/*/*"
+      "packages/*/*",
+      "packages/*"
     ]
   },
   "scripts": {
     "build": "echo build",
     "build-storybook": "build-storybook",
+    "bump:check": "yarn version check -i",
     "clean": "yarn workspaces foreach -pv run clean",
     "lint": "eslint packages --ext .jsx,.js,.ts,.tsx --quiet",
     "lint:fix": "yarn lint --fix",
