--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,11 +1,13 @@
-nodeLinker: node-modules
-
 changesetIgnorePatterns:
   - "**/*.spec.{ts,tsx}"
   - "**/*.stories.{ts,tsx}"
+
+nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
     spec: "@yarnpkg/plugin-version"
+  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+    spec: "@yarnpkg/plugin-typescript"
