--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,20 +1,18 @@
-name: master
+name: Version
 
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  pipeline-quality:
+  check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Read Node version
-        run: echo "##[set-output name=NVMRC;]$(cat .nvmrc)"
-        id: nvm
-      - name: Set Node version
-        uses: actions/setup-node@v1
         with:
-          node-version: '${{ steps.nvm.outputs.NVMRC }}'
+          fetch-depth: 0
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
@@ -25,9 +23,5 @@ jobs:
       - name: Install dependencies
         if: steps.yarn-cache-dir-path.outputs.cache-hit != 'true'
         run: yarn
-      - name: Run build
-        run: yarn build
-      - name: Run lint
-        run: yarn lint
-      - name: Run tests
-        run: yarn test:ci
+      - name: Check
+        run: yarn bump:check
