--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Upgrade yarn
+        run: yarn set version berry
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
