--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,8 @@
+changesetBaseRefs:
+  - master
+  - origin/master
+  - upstream/master
+
 changesetIgnorePatterns:
   - "**/*.spec.{ts,tsx}"
   - "**/*.stories.{ts,tsx}"
@@ -11,3 +16,5 @@ plugins:
     spec: "@yarnpkg/plugin-version"
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
+
+yarnPath: .yarn/releases/yarn-3.2.2.cjs
