chore: publish packages

--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "scripts": {
     "build": "yarn build:packages",
-    "build:packages": "yarn workspaces foreach -pv run build",
+    "build:packages": "yarn workspaces foreach -pv --exclude nimbus-design-system run build",
     "build-storybook": "build-storybook",
     "bump:check": "yarn version check",
     "bump:next": "yarn version apply --all --prerelease",
-    "clean": "yarn workspaces foreach -pv run clean",
+    "clean": "yarn workspaces foreach -pv --exclude nimbus-design-system run clean",
     "lint": "eslint packages --ext .jsx,.js,.ts,.tsx --quiet",
     "lint:fix": "yarn lint --fix",
     "pre-commit": "lint-staged",
     "pre-push": "yarn test:coverage && yarn lint && yarn types:check",
     "prepare-husky": "husky install",
-    "publish:next": "yarn bump:next && yarn clean && yarn build && yarn workspaces foreach -pv npm publish --tolerate-republish --access public --tag next",
+    "publish:next": "yarn bump:next && yarn clean && yarn build && yarn workspaces foreach -pv --exclude nimbus-design-system npm publish --tolerate-republish --access public --tag next",
     "reset": "yarn clean && rm -rf node_modules .yarn/cache .parcel-cache",
     "storybook": "start-storybook -p 6006 --ci",
     "start:dev": "yarn storybook",
