--- a/packages/react/Title/package.json
+++ b/packages/react/Title/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/title",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -12,6 +12,7 @@
   ],
   "sideEffects": false,
   "scripts": {
+    "build": "echo build",
     "clean": "rm -rf dist",
     "version": "yarn version"
   },
