--- a/packages/core/properties/package.json
+++ b/packages/core/properties/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/core-properties",
-  "version": "1.0.0-rc.1",
+  "version": "0.0.0",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
