--- a/packages/react/Title/package.json
+++ b/packages/react/Title/package.json
@@ -30,5 +30,6 @@
   },
   "bugs": {
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
-  }
+  },
+  "stableVersion": "0.0.0"
 }
