--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build-storybook": "build-storybook",
     "bump:check": "yarn version check",
     "bump:next": "yarn version apply --all --prerelease",
+    "bump:stable": "yarn version apply --all",
     "clean": "yarn workspaces foreach -pv --exclude nimbus-design-system run clean",
     "lint": "eslint packages --ext .jsx,.js,.ts,.tsx --quiet",
     "lint:fix": "yarn lint --fix",
@@ -22,6 +23,7 @@
     "pre-push": "yarn test:coverage && yarn lint && yarn types:check",
     "prepare-husky": "husky install",
     "publish:next": "yarn bump:next && yarn clean && yarn build && yarn workspaces foreach -pv --exclude nimbus-design-system npm publish --tolerate-republish --access public --tag next",
+    "publish:stable": "yarn bump:stable && yarn clean && yarn build && yarn workspaces foreach -pv --exclude nimbus-design-system npm publish npm publish --tolerate-republish --access public",
     "reset": "yarn clean && rm -rf node_modules .yarn/cache .parcel-cache",
     "storybook": "start-storybook -p 6006 --ci",
     "start:dev": "yarn storybook",
