--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,43 @@
 {
-  "extends": "./tsconfig.base.json",
+  "include": ["packages"],
   "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "allowJs": false,
+    "allowSyntheticDefaultImports": true,
+    "alwaysStrict": true,
+    "baseUrl": ".",
+    "emitDecoratorMetadata": false,
+    "esModuleInterop": true,
+    "experimentalDecorators": false,
+    "importHelpers": true,
+    "jsx": "react",
+    "lib": ["dom", "esnext"],
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": false,
+    "outDir": "./dist",
+    "noFallthroughCasesInSwitch": false,
+    "noImplicitAny": true,
+    "noImplicitReturns": false,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "pretty": true,
+    "resolveJsonModule": true,
+    "sourceMap": true,
+    "isolatedModules": true,
+    "strict": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "stripInternal": true,
+    "types": ["node", "jest"],
+    "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
-      "@nimbus-ds/core-properties": ["./packages/core/properties/src"],
-      "@nimbus-ds/tokens": ["./packages/tokens/dist"],
+      "@nimbus-ds/tokens": ["./packages/tokens"],
+      "@nimbus-ds/styles": ["./packages/styles/src"],
       "@nimbus-ds/Title": ["./packages/react/Title/src"]
     }
   }
