--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     ]
   },
   "scripts": {
-    "build": "yarn build:packages",
-    "build:packages": "yarn workspaces foreach -pv --exclude nimbus-design-system run build",
-    "build-storybook": "build-storybook",
+    "build": "yarn clean && yarn build:packages",
+    "build:packages": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system run build",
+    "build:storybook": "build-storybook -c .storybook -o .build-storybook",
     "bump:check": "yarn version check",
     "bump:next": "yarn version apply --all --prerelease",
     "bump:stable": "yarn version apply --all",
-    "clean": "yarn workspaces foreach -pv --exclude nimbus-design-system run clean",
+    "clean": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system run clean",
     "lint": "eslint packages --ext .jsx,.js,.ts,.tsx --quiet",
     "lint:fix": "yarn lint --fix",
     "pre-commit": "lint-staged",
     "pre-push": "yarn test:coverage && yarn lint && yarn types:check",
     "prepare-husky": "husky install",
-    "publish:next": "yarn bump:next && yarn clean && yarn build && yarn workspaces foreach -pv --exclude nimbus-design-system npm publish --tolerate-republish --access public --tag next",
-    "publish:stable": "yarn bump:stable && yarn clean && yarn build && yarn workspaces foreach -pv --exclude nimbus-design-system npm publish npm publish --tolerate-republish --access public",
+    "publish:next": "yarn bump:next && yarn clean && yarn build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public --tag next",
+    "publish:stable": "yarn bump:stable && yarn clean && yarn build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish npm publish --tolerate-republish --access public",
     "reset": "yarn clean && rm -rf node_modules .yarn/cache .parcel-cache",
     "storybook": "start-storybook -p 6006 --ci",
     "start:dev": "yarn storybook",
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@jest/types": "^28.1.3",
@@ -57,8 +58,8 @@
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
     "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack4": "^6.5.10",
-    "@storybook/manager-webpack4": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@testing-library/react": "^13.3.0",
     "@tiendanube/eslint-config": "^0.3.2",
@@ -67,6 +68,8 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
+    "@vanilla-extract/babel-plugin": "^1.1.7",
+    "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.19.0",
@@ -91,7 +94,6 @@
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "sass": "^1.54.3",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
@@ -100,5 +102,5 @@
     "node": ">=14.17 <=16.x",
     "yarn": ">=3.2.0"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.2"
 }
