--- a/packages/react/Title/package.json
+++ b/packages/react/Title/package.json
@@ -12,12 +12,13 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "echo build",
+    "build": "yarn build:types && webpack",
+    "build:types": "tsc --emitDeclarationOnly --declaration true --declarationDir ./dist --baseUrl ../../../",
     "clean": "rm -rf dist",
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/core-properties": "workspace:*"
+    "@nimbus-ds/styles": "workspace:*"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -31,5 +32,16 @@
   "bugs": {
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
-  "stableVersion": "0.0.0"
+  "stableVersion": "0.0.0",
+  "devDependencies": {
+    "@vanilla-extract/babel-plugin": "^1.1.7",
+    "@vanilla-extract/css": "^1.7.2",
+    "@vanilla-extract/recipes": "^0.2.5",
+    "@vanilla-extract/webpack-plugin": "^2.1.11",
+    "terser-webpack-plugin": "^5.3.5",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
