--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nimbus-ds/core-properties",
-  "version": "1.0.0-rc.1",
+  "name": "@nimbus-ds/styles",
+  "version": "0.0.0",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -12,9 +12,12 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "echo build",
+    "build": "webpack",
     "clean": "rm -rf dist",
     "version": "yarn version"
+  },
+  "dependencies": {
+    "@nimbus-ds/tokens": "workspace:*"
   },
   "homepage": "https://nimbus.nuvemshop.com.br/documentation",
   "repository": {
@@ -24,5 +27,15 @@
   "bugs": {
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
-  "stableVersion": "0.0.0"
+  "stableVersion": "0.0.0",
+  "devDependencies": {
+    "@vanilla-extract/babel-plugin": "^1.1.7",
+    "@vanilla-extract/css": "^1.7.2",
+    "@vanilla-extract/recipes": "^0.2.5",
+    "@vanilla-extract/webpack-plugin": "^2.1.11",
+    "mini-css-extract-plugin": "^2.6.1",
+    "ts-loader": "^9.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
