--- a/packages/react/Title/package.json
+++ b/packages/react/Title/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/title",
-  "version": "1.0.0-rc.2",
+  "version": "1.0.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -32,7 +32,6 @@
   "bugs": {
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
-  "stableVersion": "0.0.0",
   "devDependencies": {
     "@vanilla-extract/babel-plugin": "^1.1.7",
     "@vanilla-extract/css": "^1.7.2",
