--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/tokens",
-  "version": "1.0.0-rc.3",
+  "version": "1.0.0",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -26,6 +26,5 @@
   },
   "devDependencies": {
     "style-dictionary": "^3.7.1"
-  },
-  "stableVersion": "0.0.0"
+  }
 }
