--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "pre-commit": "lint-staged",
     "pre-push": "yarn test:coverage && yarn lint && yarn types:check",
     "prepare-husky": "husky install",
-    "publish:next": "yarn bump:next && yarn clean && yarn build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public --tag next",
-    "publish:stable": "yarn bump:stable && yarn clean && yarn build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public",
+    "publish:next": "yarn bump:next && yarn build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public --tag next",
+    "publish:stable": "yarn bump:stable && yarn build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public",
     "reset": "yarn clean && rm -rf node_modules .yarn/cache .parcel-cache",
     "storybook": "start-storybook -p 6006 --ci",
     "start:dev": "yarn storybook",
