feat: create new yarn version

--- a/.eslintrc
+++ b/.eslintrc
@@ -66,6 +66,7 @@
         "packageDir": [
           ".",
           "./packages/react/Title",
+          "./packages/react/Text",
           "./packages/tokens",
           "./packages/styles"
         ]
