--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
           curl --request PUT \
           --url 'https://api.github.com/repos/tiendanube/nimbus-design-system/branches/master/protection' \
           --header 'Authorization: token ${{ secrets.PAT_CHANGE_BRANCH_PROTECTION_RULES_FROM_JUNIOR_CONQUISTA }}' \
-          --data '{"enforce_admins":false,"required_pull_request_reviews":null,"required_conversation_resolution":false}'
+          --data '{"enforce_admins":false,"required_pull_request_reviews":null,"required_status_checks":null,"required_conversation_resolution":false,"restrictions":null,"required_linear_history":false}'
 
       - name: Commit release
         uses: stefanzweifel/git-auto-commit-action@v4
@@ -49,4 +49,4 @@ jobs:
           --url 'https://api.github.com/repos/tiendanube/nimbus-design-system/branches/master/protection' \
           --header 'Authorization: token ${{ secrets.PAT_CHANGE_BRANCH_PROTECTION_RULES_FROM_JUNIOR_CONQUISTA }}' \
           --header 'Accept: application/vnd.github.luke-cage-preview+json' \
-          --data '{"enforce_admins":true,"required_pull_request_reviews":{"dismiss_stale_reviews":true","require_code_owner_reviews":true,"required_approving_review_count":2},"required_conversation_resolution":true}'
+          --data '{"enforce_admins":true,"required_pull_request_reviews":{"dismiss_stale_reviews":true,"require_code_owner_reviews":true,"required_approving_review_count":2},"required_conversation_resolution":true,"required_status_checks":null,"restrictions":null,"required_linear_history":true}'
