--- a/packages/react/Text/package.json
+++ b/packages/react/Text/package.json
@@ -18,6 +18,7 @@
     "version": "yarn version"
   },
   "dependencies": {
+    "@nimbus-ds/skeleton": "workspace:*",
     "@nimbus-ds/styles": "workspace:*"
   },
   "peerDependencies": {
@@ -33,9 +34,6 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@vanilla-extract/babel-plugin": "^1.1.7",
-    "@vanilla-extract/css": "^1.7.2",
-    "@vanilla-extract/recipes": "^0.2.5",
     "@vanilla-extract/webpack-plugin": "^2.1.11",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
