--- a/packages/react/Skeleton/package.json
+++ b/packages/react/Skeleton/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nimbus-ds/title",
-  "version": "1.0.2",
+  "name": "@nimbus-ds/skeleton",
+  "version": "0.0.0",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -18,7 +18,6 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/skeleton": "workspace:*",
     "@nimbus-ds/styles": "workspace:*"
   },
   "peerDependencies": {
@@ -34,6 +33,7 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@vanilla-extract/dynamic": "^2.0.2",
     "@vanilla-extract/webpack-plugin": "^2.1.11",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
