--- a/packages/react/Title/package.json
+++ b/packages/react/Title/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/title",
-  "version": "1.0.2",
+  "version": "1.1.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -18,6 +18,7 @@
     "version": "yarn version"
   },
   "dependencies": {
+    "@nimbus-ds/skeleton": "workspace:*",
     "@nimbus-ds/styles": "workspace:*"
   },
   "peerDependencies": {
@@ -33,14 +34,12 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@vanilla-extract/babel-plugin": "^1.1.7",
-    "@vanilla-extract/css": "^1.7.2",
-    "@vanilla-extract/recipes": "^0.2.5",
     "@vanilla-extract/webpack-plugin": "^2.1.11",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
-  }
+  },
+  "stableVersion": "1.0.2"
 }
