--- a/packages/react/Text/tsconfig.json
+++ b/packages/react/Text/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": ".",
     "declaration": false,
     "paths": {
+      "@nimbus-ds/skeleton": ["../skeleton/src"],
       "@nimbus-ds/styles": ["../../styles/src"]
     }
   }
