--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -5,53 +5,30 @@ on:
     branches:
       - master
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
   publish-storybook:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set node version
-        id: node_version
-        run: echo ::set-output name=NVMRC::$(cat .nvmrc)
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "${{ steps.node_version.outputs.NVMRC }}"
-          registry-url: "https://registry.npmjs.org"
+        uses: actions/checkout@v2
 
       - name: Install dependencies
         run: yarn
 
-      - name: Install dependencies
+      - name: Build packages
         run: yarn build:packages
 
-      - name: build
+      - name: build storybook
         run: yarn build:storybook
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v1
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@3.6.2
+        with:
+          branch: gh-pages
+          folder: .build-storybook
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
           path: ".build-storybook"
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
