--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
     "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
       "@nimbus-ds/tokens": ["./packages/tokens"],
-      "@nimbus-ds/styles": ["./packages/styles/src"]
+      "@nimbus-ds/styles": ["./packages/styles/src"],
+      "@nimbus-ds/skeleton": ["./packages/react/Skeleton/src"]
     }
   }
 }
