feat: added new style pack for tag component

--- a/.eslintrc
+++ b/.eslintrc
@@ -68,6 +68,7 @@
           "./packages/styles",
           "./packages/tokens",
           "./packages/react/Skeleton",
+          "./packages/react/Tag",
           "./packages/react/Text",
           "./packages/react/Title"
         ]
