--- a/packages/react/Title/tsconfig.json
+++ b/packages/react/Title/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "declaration": false,
     "paths": {
-      "@nimbus-ds/skeleton": ["../skeleton/src"],
+      "@nimbus-ds/skeleton": ["../Skeleton/src"],
       "@nimbus-ds/styles": ["../../styles/src"]
     }
   }
