--- a/packages/react/Tag/tsconfig.json
+++ b/packages/react/Tag/tsconfig.json
@@ -6,6 +6,7 @@
     "declaration": false,
     "paths": {
       "@nimbus-ds/skeleton": ["../Skeleton/src"],
+      "@nimbus-ds/text": ["../Text/src"],
       "@nimbus-ds/styles": ["../../styles/src"]
     }
   }
