--- a/packages/react/Tag/package.json
+++ b/packages/react/Tag/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nimbus-ds/text",
-  "version": "1.1.2-rc.1",
+  "name": "@nimbus-ds/tag",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -34,6 +34,7 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@nimbus-ds/text": "workspace:*",
     "@vanilla-extract/webpack-plugin": "^2.1.11",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
@@ -41,5 +42,5 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "stableVersion": "1.1.1"
+  "stableVersion": "0.0.0"
 }
