--- a/packages/react/Badge/package.json
+++ b/packages/react/Badge/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nimbus-ds/skeleton",
-  "version": "1.0.1",
+  "name": "@nimbus-ds/badge",
+  "version": "0.0.0",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -18,6 +18,7 @@
     "version": "yarn version"
   },
   "dependencies": {
+    "@nimbus-ds/skeleton": "workspace:*",
     "@nimbus-ds/styles": "workspace:*"
   },
   "peerDependencies": {
@@ -33,13 +34,11 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@vanilla-extract/dynamic": "^2.0.2",
     "@vanilla-extract/webpack-plugin": "^2.1.11",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
-  },
-  "stableVersion": "1.0.0"
+  }
 }
