--- a/packages/react/Text/package.json
+++ b/packages/react/Text/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/text",
-  "version": "1.1.2-rc.1",
+  "version": "1.1.2",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
