--- a/packages/styles/tsconfig.json
+++ b/packages/styles/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "declaration": true,
+    "module": "esnext",
     "declarationDir": "./dist",
     "paths": {
       "@nimbus-ds/tokens": ["../tokens"]
