--- a/packages/react/Tag/package.json
+++ b/packages/react/Tag/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@nimbus-ds/text": "workspace:*",
-    "@vanilla-extract/webpack-plugin": "^2.1.11",
+    "@tiendanube/icons": "^0.2.7",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
