--- a/packages/react/Badge/package.json
+++ b/packages/react/Badge/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "@nimbus-ds/skeleton": "workspace:*",
-    "@nimbus-ds/styles": "workspace:*"
+    "@nimbus-ds/styles": "workspace:*",
+    "@nimbus-ds/text": "workspace:*"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -34,7 +35,6 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@vanilla-extract/webpack-plugin": "^2.1.11",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
