--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["packages"],
   "compilerOptions": {
     "target": "esnext",
-    "module": "esnext",
+    "module": "commonjs",
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
@@ -37,8 +37,7 @@
     "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
       "@nimbus-ds/tokens": ["./packages/tokens"],
-      "@nimbus-ds/styles": ["./packages/styles/src"],
-      "@nimbus-ds/skeleton": ["./packages/react/Skeleton/src"]
+      "@nimbus-ds/styles": ["./packages/styles/src"]
     }
   }
 }
