--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Build tokens
-        run: yarn workspace @nimbus-ds/tokens run build 
+      - name: Build essentials
+        run: yarn build:essentials
 
       - name: build storybook
         run: yarn build:storybook
