--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Build essentials
-        run: yarn build:essentials
+      - name: Build
+        run: yarn build
 
       - name: build storybook
         run: yarn build:storybook
