--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@storybook/builder-webpack5": "^6.5.12",
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/react": "^6.5.12",
+    "@svgr/webpack": "^6.3.1",
     "@testing-library/react": "^13.3.0",
     "@tiendanube/eslint-config": "^0.3.2",
     "@types/jest": "28.1.6",
@@ -94,6 +95,7 @@
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
+    "jest-svg-transformer": "^1.0.0",
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
