--- a/.eslintrc
+++ b/.eslintrc
@@ -72,7 +72,8 @@
           "./packages/react/Tag",
           "./packages/react/Text",
           "./packages/react/Title",
-          "./packages/react/Toast"
+          "./packages/react/Toast",
+          "./packages/react/Button"
         ]
       }
     ],
