feat: create new component Tooltip

--- a/.eslintrc
+++ b/.eslintrc
@@ -73,7 +73,8 @@
           "./packages/react/Text",
           "./packages/react/Title",
           "./packages/react/Toast",
-          "./packages/react/Button"
+          "./packages/react/Button",
+          "./packages/react/Tooltip"
         ]
       }
     ],
