fix: change github actions

--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -19,7 +19,9 @@ jobs:
         run: yarn build
 
       - name: build storybook
-        run: yarn build:storybook
+        run: |
+          export NODE_OPTIONS="--max_old_space_size=4096"
+          yarn build:storybook
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.6.2
