feat: add codecov

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run build
         run: |
           export NODE_OPTIONS="--max_old_space_size=4096" 
-          yarn build
+          yarn build:essentials
 
       - name: Run lint
         run: yarn lint
